# cuda-sparse-kernels

./: CMakeLists.txt  README.md
examples/: basic_example.cu  torch_training.py
include/: spmm.h
src/: kernel.cu  wrapper.cpp
torch_extension/: __init__.py  setup.py  sparse_autoencoder.py  spmm_extension.cpp  torch_integration.py  training_utils.py
